# tesis_MIA_lk

./: .gitignore  ANALISIS_BIBLIOGRAFICO_ZOTERO.md  DEFINITIVE_ANSWER_128x5_vs_64x4.md  FINAL_ANSWER_ENGLISH.md  FINAL_ANSWER_TO_USER.md  QUICK_ANSWER.md  README.md  RESPUESTA_FINAL_AL_USUARIO.md  TASK_COMPLETION_REPORT.md  VERIFICATION_CHECKPOINT.md  _add_paper_types.py  _audit_types.py  _check_dtr.py  _check_end.py  _classify_zotero_tesis.py  _dedup.py  _deep_inspect.py  _diag.py  _extract_script.py  _find_error.py  _fix_local_pdf.py  _fix_missing_nodes.py  _fix_stipo_leak.py  _list_papers.py  _list_papers2.py  _make_offline.py  _match_all.py  _merge_aporte_types.py  _organize_zotero_collections_tesis.py  _patch.py  _patch_final.py  _patch_zotero_cloud.py  _reclassify_types.py  _remap_local_pdf.py  _requery_zotero.py  _scan_js.py  _script_extract.js  _survey_types.py  _zotero_cloud_map.json  diag_flux.py  (+20 more)
Entrega_Google_Drive/: 00_indice_entrega.xlsx  LEEME.txt
Estado del arte/: README.html  README.md
Plan/: _verify.txt  evaluacion_formato_8_2_plan_tesis.xlsx  guia_estructura_y_contenido_plan_tesis.md  guia_redaccion_plan_tesis.md  plan_tesis_cables_pinn.aux  plan_tesis_cables_pinn.bbl  plan_tesis_cables_pinn.bbl-SAVE-ERROR  plan_tesis_cables_pinn.bcf  plan_tesis_cables_pinn.blg  plan_tesis_cables_pinn.fdb_latexmk  plan_tesis_cables_pinn.fls  plan_tesis_cables_pinn.loe  plan_tesis_cables_pinn.lof  plan_tesis_cables_pinn.lop  plan_tesis_cables_pinn.lot  plan_tesis_cables_pinn.run.xml  plan_tesis_cables_pinn.tex  plan_tesis_cables_pinn.tex.bkp  plan_tesis_cables_pinn.toc  (+6 more)
(+327 files in other folders)
