[project]
name = "pinn-cables"
version = "0.1.0"
description = "PINN solver for 2D heat conduction in underground cable systems"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pinn_cables*"]

[tool.pytest.ini_options]
testpaths = ["pinn_cables/tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "-m \"not slow\""
